Emacs that is more likely to be reproducible; that is, if you build
and install Emacs twice, the second Emacs is a copy of the first.
Deterministic builds omit the build date from the output of the
'emacs-version' and 'erc-cmd-SV' functions, and the leave the
following variables nil: 'emacs-build-system', 'emacs-build-time',
'erc-emacs-build-time'.

** The configure option '--with-gameuser' now defaults to 'no',
as this appears to be the most common configuration in practice.
When it is 'no', the shared game directory and the auxiliary program
update-game-score are no longer needed and are not installed.

** Emacs no longer works on IRIX.  We expect that Emacs users are not
affected by this, as SGI stopped supporting IRIX in December 2013.


* Startup Changes in Emacs 26.1

+++
** New option '--fg-daemon'.  This is the same as '--daemon', except
it runs in the foreground and does not fork.  This is intended for
modern init systems such as systemd, which manage many of the traditional
aspects of daemon behavior themselves.  '--bg-daemon' is now an alias
for '--daemon'.

+++
** New option '--module-assertions'.
When given this option, Emacs will perform expensive correctness
checks when dealing with dynamic modules.  This is intended for module
authors that wish to verify that their module conforms to the module
requirements.  The option makes Emacs abort if a module-related
assertion triggers.

+++
** Emacs now supports 24-bit colors on capable text terminals
Terminal is automatically initialized to use 24-bit colors if the
required capabilities are found in terminfo.  See the FAQ node
"Colors on a TTY" for more information.

+++
** Emacs now obeys the X resource "scrollBar" at startup.
The effect is similar to that of "toolBar" resource on the tool bar.


* Changes in Emacs 26.1

+++
** Functions in 'write-contents-functions' can fully short-circuit the
'save-buffer' process.  Previously, saving a buffer that was not